@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 2f135c673262922914456889d9cb7cfc55f79f28 ChangeLog
+SHA1 57ce8d6dddf129a0da34fda6f87bed9a7f829243 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 60323c66e897b892be141b97c8bf7d551fa282c3 META.yml
+SHA1 709683bc8b19a5265b9355d09e735381612388b6 META.yml
 SHA1 14e358b68232b26478c491ba66290d4dc07ae02a Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 674586ea140ee08b1931932d968ba3cf89867f29 lib/Term/Menus.pm
+SHA1 d61530d8ca04309908e5f825aaffd095b1be1852 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk5P2HQACgkQdsVAdUjO9IklFwCffplIPXpNvYMNXpj1uwAkbKwe
-uJcAoIIT9uYKnGJ/FxPHCRuYEw/8Mgfe
-=JvRM
+iEYEARECAAYFAk5S5W4ACgkQdsVAdUjO9Ilb9QCdFI1ApSwrArJ8OkPYcSBGSRJo
+j/gAoIREFO88ZKQ2+zGauBLSo9Vx/9MC
+=FlVJ
 -----END PGP SIGNATURE-----
